WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82247
Find in page overlay and bouncy are not always positioned correctly
https://bugs.webkit.org/show_bug.cgi?id=82247
Summary
Find in page overlay and bouncy are not always positioned correctly
Anders Carlsson
Reported
2012-03-26 14:29:19 PDT
Find in page overlay and bouncy are not always positioned correctly
Attachments
Patch
(1.74 KB, patch)
2012-03-26 14:32 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-26 14:32:53 PDT
Created
attachment 133894
[details]
Patch
Sam Weinig
Comment 2
2012-03-26 14:37:12 PDT
Comment on
attachment 133894
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133894&action=review
> Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:227 > + // Assume that we'll be successful in updating the scroll position. > + updateMainFrameScrollPosition(scrollPosition);
Can you explain what happens if that assumption doesn't hold, and how we deal with it?
Anders Carlsson
Comment 3
2012-03-26 14:42:20 PDT
(In reply to
comment #2
)
> (From update of
attachment 133894
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=133894&action=review
> > > Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:227 > > + // Assume that we'll be successful in updating the scroll position. > > + updateMainFrameScrollPosition(scrollPosition); > > Can you explain what happens if that assumption doesn't hold, and how we deal with it?
Thinking about it, I'm pretty sure that the assumption will hold so I updated the comment.
Anders Carlsson
Comment 4
2012-03-26 14:42:22 PDT
(In reply to
comment #2
)
> (From update of
attachment 133894
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=133894&action=review
> > > Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:227 > > + // Assume that we'll be successful in updating the scroll position. > > + updateMainFrameScrollPosition(scrollPosition); > > Can you explain what happens if that assumption doesn't hold, and how we deal with it?
Thinking about it, I'm pretty sure that the assumption will hold so I updated the comment.
Anders Carlsson
Comment 5
2012-03-26 14:44:09 PDT
Committed
r112148
: <
http://trac.webkit.org/changeset/112148
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug