Find in page overlay and bouncy are not always positioned correctly https://bugs.webkit.org/show_bug.cgi?id=82247 <rdar://problem/10866139>

Reviewed by Sam Weinig.

In WebCore, a lot of code depends on scroll position updates to happen synchronously, so
update the frame view scroll position before asking the scrolling thread to scroll.

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::ScrollingCoordinator::requestScrollPositionUpdate):

Canonical link: https://commits.webkit.org/99585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112148 268f45cc-cd09-0410-ab3c-d52691b4dbfc